--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,13 @@
   "extends": [
     "airbnb-base",
     "prettier"
+    ""
   ],
   "env": {
     "node": true,
     "es6": true,
-    "browser": true
+    "browser": true,
+    "ecmaVersion": 2023
   },
   "rules": {
     "no-console": "off"
