--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-import": "^2.25.2",
     "sass": "^1.69.3",
     "vite": "^4.4.11"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.2"
   }
 }
