--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "gh-pages": "^6.0.0",
     "sass": "^1.69.3",
     "vite": "^4.4.11"
   }
